# DailyNews-AIEnhance

./: index.html  readme.md  search.html
.github/workflows/: run_analysis.yml
css/: styles.css
db_schema/: rls_policies.sql  schema.sql
js/: app.js  search.js  supabase_client.js
scripts/: analysis.py  crawler.py  db.py  l1_structure.py  l2_structure.py  main.py  pyproject.toml  report.py  sync_topics.py
scripts/prompts/: l1_analysis.txt  l2_report.txt
